Edit .gitignore file

--- a/QRcode_JSP/.gitignore
+++ b/QRcode_JSP/.gitignore
@@ -1,1 +1,2 @@
-mv .idea ../.idea_backup rm .idea # in case you forgot to close your IDE git add .idea git commit -m "Remove .idea from repo" mv ../.idea_backup .idea
+/.idea/
+.idea/workspace.xml
